--- a/Book_Shop/MainWindow.xaml
+++ b/Book_Shop/MainWindow.xaml
@@ -73,15 +73,15 @@
 
     <Grid x:Name="Grid" OpacityMask="Black" Background="#FF2C2F33">
         <Rectangle HorizontalAlignment="Center" Height="289" VerticalAlignment="Center" Width="262" Fill="#FF23272A" RadiusX="10" RadiusY="10"/>
-        <TextBox x:Name="TexBox_Username" HorizontalAlignment="Center" TextWrapping="Wrap" Width="180" Height="35" Margin="0,184,0,0" Background="#FFD9D9D9" Text="Username..." SelectionBrush="{x:Null}" TextChanged="TextBox_TextChanged_1"/>
+        <TextBox x:Name="TexBox_Username" HorizontalAlignment="Center" TextWrapping="Wrap" Width="180" Height="35" Margin="0,184,0,0" Background="#FFD9D9D9" Text="Username..." SelectionBrush="{x:Null}"/>
         <Button x:Name="Button_LogIn" Content="LOG IN"
                 HorizontalAlignment="Center"
                 Margin="0,289,0,0"
                 VerticalAlignment="Top"
                 Width="180"
                 Height="38"
-                Style="{StaticResource ButtonStyle}" Click="Button_Click_2"/>
+                Style="{StaticResource ButtonStyle}"/>
         <Image HorizontalAlignment="Center" Height="63" VerticalAlignment="Top" Width="98" Source="/Group 1.png" Margin="0,92,0,0" />
-        <TextBox x:Name="TexBox_Password" HorizontalAlignment="Center" TextWrapping="Wrap" Width="180" Height="35" Background="#FFD9D9D9" SelectionBrush="{x:Null}" Margin="0,226,0,0" TextChanged="TextBox_TextChanged" Text="Password..."/>
+        <TextBox x:Name="TexBox_Password" HorizontalAlignment="Center" TextWrapping="Wrap" Width="180" Height="35" Background="#FFD9D9D9" SelectionBrush="{x:Null}" Margin="0,226,0,0" Text="Password..."/>
     </Grid>
 </Window>
