--- a/Book_Shop/MainWindow.xaml
+++ b/Book_Shop/MainWindow.xaml
@@ -12,7 +12,7 @@
     </Window.Resources>
 
     <Grid x:Name="App">
-        <Grid x:Name="AuthWindow">
+        <Grid x:Name="AuthWindow" d:IsHidden="True">
             <Grid x:Name="AuthPanel" Width="262" Height="289">
                 <Rectangle Fill="#FF23272A" RadiusX="10" RadiusY="10"/>
                 <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,10">
@@ -23,6 +23,34 @@
                 </StackPanel>
             </Grid>
         </Grid>
-        <Grid x:Name="BooksWindow"/>
+        <Grid x:Name="BooksWindow">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Margin="10,10,20,0">
+                <ui:Button Content="Новинки" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="0,0,0,6"/>
+                <ui:Button Content="Популярные книги" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="0,0,0,6"/>
+                <ui:Button Content="Популярные авторы" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="0,0,0,6"/>
+                <ui:Button Content="Популярные Жанры" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="0,0,0,6"/>
+                <ui:Button Content="Итоги дня" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="0,0,0,6"/>
+                <ui:Button Content="Итоги Недели" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="0,0,0,6"/>
+                <ui:Button Content="Итоги Месяца" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="0,0,0,6"/>
+                <ui:Button Content="Итоги года" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="0,0,0,6"/>
+            </StackPanel>
+            <Grid Grid.Column="1" Margin="0,10,10,0">
+                <Grid VerticalAlignment="Top" Margin="15,0,25,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="auto"/>
+                    </Grid.ColumnDefinitions>
+                    <ui:TextBox x:Name="SearchInput" PlaceholderText="Поиск..."/>
+                    <ui:Button Icon="Search48" IconFilled="True" Margin="10,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Stretch" Grid.Column="1"/>
+                </Grid>
+                <ScrollViewer>
+                    <StackPanel x:Name="booksList"/>
+                </ScrollViewer>
+            </Grid>
+        </Grid>
     </Grid>
 </Window>
