--- a/Book_Shop/MainWindow.xaml
+++ b/Book_Shop/MainWindow.xaml
@@ -29,7 +29,7 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <StackPanel Margin="10,10,20,0">
-                <ui:Button Content="Каталог" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="0,0,0,6"/>
+                <ui:Button Content="Каталог" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="0,0,0,6" Click="CatalogBtnClick"/>
                 <ui:Button Content="Новинки" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="0,0,0,6"/>
                 <ui:Button Content="Популярные книги" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="0,0,0,6"/>
                 <ui:Button Content="Популярные авторы" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="0,0,0,6"/>
