--- a/Book_Shop/MainWindow.xaml
+++ b/Book_Shop/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         xmlns:local="clr-namespace:Book_Shop"
         mc:Ignorable="d"
-        Title="BookShop" Height="450" Width="800" Icon="/inc.png" Background="#FF2C2F33">
+        Title="BookShop" Height="450" Width="800" Icon="/inc.png" Background="#FF2C2F33" MinWidth="800" MinHeight="450">
     <Window.Resources>
         
     </Window.Resources>
@@ -40,7 +40,7 @@
                 <ui:Button Content="Итоги года" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="0,0,0,6"/>
             </StackPanel>
             <Grid Grid.Column="1" Margin="0,10,10,0">
-                <Grid VerticalAlignment="Top" Margin="15,0,15,0">
+                <Grid VerticalAlignment="Top" Margin="0,0,15,0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="auto"/>
@@ -49,23 +49,7 @@
                     <ui:Button Icon="Search48" IconFilled="True" Margin="10,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Stretch" Grid.Column="1" Click="SearchBtnClick"/>
                 </Grid>
                 <ScrollViewer Margin="0,40,0,0">
-                    <StackPanel x:Name="booksList">
-                        <ui:CardExpander Header="Название книги" VerticalAlignment="Top">
-                            <Grid>
-                                <StackPanel>
-                                    <Label Content="Автор" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,0,4"/>
-                                    <Label Content="Издатель" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,0,4"/>
-                                    <Label Content="Количество страниц" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,0,4"/>
-                                    <Label Content="Жанр" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,0,4"/>
-                                    <Label Content="Год издания" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,0,4"/>
-                                    <Label Content="Себестоимость" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,0,4"/>
-                                    <Label Content="Цена для продажи" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,0,4"/>
-                                    <Label Content="Сиквел" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,0,4"/>
-                                    
-                                </StackPanel>
-                            </Grid>
-                        </ui:CardExpander>
-                    </StackPanel>
+                    <StackPanel x:Name="booksList"/>
                 </ScrollViewer>
             </Grid>
         </Grid>
