--- a/Book_Shop/MainWindow.xaml
+++ b/Book_Shop/MainWindow.xaml
@@ -46,6 +46,7 @@
                 <ui:Button Content="Итоги Месяца" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="0,0,0,6" Click="RandomBook"/>
                 <ui:Button Content="Итоги года" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="0,0,0,6" Click="RandomBook"/>
             </StackPanel>
+            <ui:Button Content="Выход" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Margin="10,0,20,10" Background="#3FFF0000" Click="LogoutClick" />
             <Grid Grid.Column="1" Margin="0,10,10,0">
                 <Grid VerticalAlignment="Top" Margin="0,0,15,0">
                     <Grid.ColumnDefinitions>
